The attached patch fixes an error in w32_try_mkdir: it only worked for plain-ASCII directory names, because CreateDirectory doesn't support UTF-8 encoded file names.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG0f03bdcd2e61 common,w32: Fix early home dir creation. |
Related Objects
Related Objects
Event Timeline
Comment Actions
There is actually a much easier fix here. Thanks for pointing out the problem. For histroical reasons we have several places where we create the homedir.